# graphes_livre

./: .gitattributes  .gitignore  README.md  __init__.py  pyproject.toml  register_font.py  run_plots.py
data/: benchmarks_clean.json  co2-emissions-and-gdp.csv  release_date_mapping.json  release_date_mapping_old.json
src/graphes_livre/: __init__.py  utils.py
src/graphes_livre/10_Difference_score_IA_humains/: vitesse_benchmarks.py
src/graphes_livre/11_amelioration_generation_image/: Notes.docx  Readme.md
src/graphes_livre/12_Difference_score_IA_humains/: data_claude.json  data_grok.json  plot.py
src/graphes_livre/12_bar_graph_competences/: bar_graph_competences.py  surface.py
src/graphes_livre/14_surface_competences/: bar_graph.py  plot.py
src/graphes_livre/14_systeme_agentique/: INFO.md  SchemaAgent.fig
src/graphes_livre/15_gaia/: gaia.ipynb  gaia.py
src/graphes_livre/15_tableaux/: Prompt.docx
src/graphes_livre/16_generation_image/: Notes.docx
src/graphes_livre/16_systeme_agentique/: SchemaAgent.fig
src/graphes_livre/17_gaia/: plot.py
src/graphes_livre/17_progres_ia/: progres_ia.py
src/graphes_livre/18_amelioration_image_echelle/: Readme.md
src/graphes_livre/18_generation_image/: stable_diffusion.py
src/graphes_livre/18_model_training_growth_epoch/: compute_growth_epoch.ipynb  compute_growth_epoch.py
src/graphes_livre/18_ressources/: limites.py
src/graphes_livre/19_agriculture_emplois/: agriculture_emplois.py
src/graphes_livre/19_progres_ia/: plot.py
src/graphes_livre/1_neurone/: Readme.md
src/graphes_livre/22_ressources/: plot.py
(+55 files in other folders)
