[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphes_livre"
version = "0.1.0"
description = "Graph utilities for data visualization"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "plotly",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "torch",
    "geopandas>=1.1.1",
    "kaleido>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
