[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphes_livre"
version = "0.1.0"
description = "Graph utilities for data visualization"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "plotly",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "torch",
    "geopandas>=1.1.1",
    "kaleido>=1.0.0",
    "tqdm>=4.67.1",
    "scipy>=1.15.3",
    "pycountry>=24.6.1",
    "huggingface-hub>=0.34.2",
]

[tool.setuptools.packages.find]
where = ["src"]
